--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
 		</div>
 	</div>
 	<script type="module" src="/src/main.ts"></script>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?1563379cc5572b86902ef18e4e2668df";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
 </body>
 
 </html>
